# hdk_dev_tool

./: .gitattributes  .gitignore  LICENSE  README.md  do_build.bat  do_build.sh  do_clean.bat  do_clean.sh  do_lint.bat  do_lint.sh  do_test.bat  do_test.sh  requirements.txt
.github/workflows/: integration-gate.yml  integration.yml  main-branch-verification.yml
cpp/experiment/: README.md
cpp/experiment/001_versioning/: CMakeLists.txt
cpp/experiment/001_versioning/include/: version.hpp.in
cpp/experiment/001_versioning/source/: main.cpp
cpp/experiment/001_versioning/sub_project/: CMakeLists.txt
cpp/experiment/001_versioning/sub_project/include/: arithmetic.hpp  version.hpp.in
cpp/experiment/001_versioning/sub_project/source/: arithmetic.cpp
cpp/script/code/: do_build.bat  do_build.sh  do_clean.bat  do_clean.sh  do_lint.bat  do_lint.sh  do_test.bat  do_test.sh
cpp/script/test/: abstract_cpp_test_case.py  test_000_success.py  test_001_success_cmake_toolchain.py  test_002_success_pip_requirements.py  test_003_success_boost.py  test_100_build_failure.py  test_100_build_ng.py  test_200_lint_failure.py  test_200_lint_ng.py  test_300_test_failure.py  test_300_test_ng.py
cpp/script/test/000_success/source/: arithmetic.cpp
cpp/script/test/003_success_boost/: CMakeLists.txt
cpp/script/test/003_success_boost/asio/: CMakeLists.txt  example_io_service.cpp
cpp/script/test/003_success_boost/circular_buffer/: CMakeLists.txt  exmaple_circular_buffer.cpp
cpp/script/test/100_build_failure/: CMakeLists.txt
cpp/script/test/100_build_failure/source/: main.cpp
cpp/script/test/200_lint_failure/source/: arithmetic.cpp
cpp/script/test/300_test_failure/: .gitignore
cpp/script/test/300_test_failure/source/: arithmetic.cpp  main.cpp
cpp/script/test/300_test_ng/test/: test_arithmetic.cpp
document/development/10_requirements/: requirements.md
document/development/20_design/: design.md
document/development/20_design/image/: build_plantuml.bat  concept.puml  expected_usage.puml
document/papyrusrt/: papyrusrt_v1.0_quick_reference.md
papyrusrt/experiment/: README.md
papyrusrt/experiment/001_type_support/build_configuration/: top_build_configuration.xml
papyrusrt/experiment/001_type_support/build_configuration/libExperiment/: libExperiment.xml
papyrusrt/experiment/001_type_support/model/: Experiment.uml
papyrusrt/experiment/001_type_support/test/: CMakeLists.txt  TestMySizeT.cpp
papyrusrt/experiment/002_subproject_integration/: CMakeLists.txt
papyrusrt/experiment/002_subproject_integration/build_configuration/: top_build_configuration.xml
papyrusrt/experiment/002_subproject_integration/build_configuration/Experiment/: Experiment.xml
papyrusrt/experiment/002_subproject_integration/model/Experiment/: Experiment.notation  Experiment.uml
papyrusrt/experiment/002_subproject_integration/model/SubProject/: .gitignore  .project  CMakeLists.txt  SubProject.notation  SubProject.uml
papyrusrt/experiment/002_subproject_integration/model/SubProject/build_configuration/: top_build_configuration.xml
papyrusrt/experiment/002_subproject_integration/model/SubProject/build_configuration/libSubProject/: libSubProject.xml
papyrusrt/experiment/002_subproject_integration/test/: CMakeLists.txt  TestExperiment.cpp
papyrusrt/script/code/: do_build.bat  do_build.sh  do_clean.bat  do_clean.sh  do_lint.bat  do_lint.sh  do_test.bat  do_test.sh  librts.cmake  start_papyrusrt.bat  start_papyrusrt.sh
papyrusrt/script/test/: abstract_papyrusrt_test_case.py  test_000_success.py  test_001_success_cmake_toolchain.py  test_002_success_pip_requirements.py  test_100_codegen_failure.py  test_101_build_failure.py  test_200_lint_failure.py  test_300_test_failure.py
papyrusrt/script/test/000_success/build_configuration/SimpleClasses/: SimpleClasses.xml
papyrusrt/script/test/000_success/model/: Example.uml
papyrusrt/script/test/000_success/test/: TestLibAliceAndBobProxy.cpp
papyrusrt/script/test/100_codegen_failure/: CMakeLists.txt  README.md
papyrusrt/script/test/100_codegen_failure/build_configuration/AliceAndBob/: AliceAndBob.xml
papyrusrt/script/test/101_build_failure/: README.md
papyrusrt/script/test/101_build_failure/build_configuration/AliceAndBobWithThreads/: AliceAndBobWithThreads.xml
papyrusrt/script/test/101_build_failure/build_configuration/libAliceAndBobProxy/: libAliceAndBobProxy.xml
papyrusrt/script/test/101_build_failure/test/: CMakeLists.txt  TestLibAliceAndBobProxy.cpp
papyrusrt/script/test/200_lint_failure/: .gitignore
papyrusrt/script/test/200_lint_failure/build_configuration/AliceAndBobWithProxy/: AliceAndBobWithProxy.xml
papyrusrt/script/test/200_lint_failure/model/: Example.notation
papyrusrt/script/test/200_lint_failure/test/: TestLibAliceAndBobProxy.cpp
papyrusrt/script/test/300_test_failure/build_configuration/AliceAndBob/: AliceAndBob.xml
papyrusrt/script/test/300_test_failure/test/: TestLibAliceAndBobProxy.cpp
python/script/code/: do_build.bat  do_build.sh  do_clean.bat  do_clean.sh  do_lint.bat  do_lint.sh  do_test.bat  do_test.sh
python/script/test/: abstract_python_test_case.py  test_000_success.py  test_300_test_failure.py  test_300_test_ng.py
python/script/test/000_success/example_project/: application.py  arithmetic.py
python/script/test/300_test_failure/: .gitignore
python/script/test/300_test_failure/example_project/: __main__.py  arithmetic.py
python/script/test/300_test_ng/test/: test_arithmetic.py
tool/: string_replacer.py
tool/test/: test_string_replacer.py
